modules/fs/main/default/objects/Asset/fields/Shut_Down_Duration__c.field-meta.xml
<CustomField>
    <fullName>Shut_Down_Duration__c</fullName>
    <formula>IF(ISPICKVAL(OperationalStatus__c, &quot;In service&quot;), NULL, 
    TEXT(FLOOR(NOW() - Unit_ShutDown_DateTime_Rollup__c)) &amp; &apos; days &apos; &amp;
    TEXT(FLOOR(MOD(NOW() - Unit_ShutDown_DateTime_Rollup__c, 1) * 24)) &amp; &apos; hours &apos; &amp;
    TEXT(FLOOR(MOD(MOD(NOW() - Unit_ShutDown_DateTime_Rollup__c, 1) * 24, 1) * 60)) &amp; &apos; minutes&apos;
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Shut Down Duration</label>
    <type>Text</type>
</CustomField>