modules/fs/main/default/objects/Asset/fields/Shutdown_Reported_By__c.field-meta.xml
<CustomField>
    <fullName>Shutdown_Reported_By__c</fullName>
    <label>Shutdown Reported By</label>
    <length>50</length>
    <type>Text</type>
</CustomField>