modules/fs/main/default/objects/Asset/fields/Unit_Usage__c.field-meta.xml
<CustomField>
    <fullName>Unit_Usage__c</fullName>
    <label>Unit Usage</label>
    <length>255</length>
    <type>Text</type>
</CustomField>