modules/fs/main/default/objects/Asset/listViews/Unassigned_Units.listView-meta.xml
<ListView>
    <fullName>Unassigned_Units</fullName>
    <columns>ASSET.NAME</columns>
    <columns>Address_Text__c</columns>
    <columns>Product_Technology__c</columns>
    <columns>Unit_Usage__c</columns>
    <columns>Sales_Engineer__c</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>Account_Vertical__c</columns>
    <columns>RouteName__c</columns>
    <columns>Branch__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RouteName__c</field>
        <operation>equals</operation>
    </filters>
    <label>Unassigned Units</label>
    <sharedTo>
        <group>Field_Service_Admin_group</group>
    </sharedTo>
</ListView>