modules/fs/main/default/objects/Asset/listViews/Unit_Operational_status_Shutdown.listView-meta.xml
<ListView>
    <fullName>Unit_Operational_status_Shutdown</fullName>
    <columns>ASSET.NAME</columns>
    <columns>CustomerDesignation__c</columns>
    <columns>Location</columns>
    <columns>BuildingAddress__c</columns>
    <columns>ContractNumber__c</columns>
    <columns>OperationalStatus__c</columns>
    <columns>OperationalStatusReason__c</columns>
    <columns>RouteMechanic__c</columns>
    <columns>FieldSupervisor__c</columns>
    <columns>RouteNumber__c</columns>
    <columns>Unit_ShutDown_DateTime_Rollup__c</columns>
    <columns>Shut_Down_Duration__c</columns>
    <columns>Shutdown_Reported_By__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>OperationalStatus__c</field>
        <operation>equals</operation>
        <value>Shutdown</value>
    </filters>
    <label>Unit Operational status - Shutdown</label>
</ListView>